# debt_tracker

./: .dockerignore  .gitignore  LICENSE  README.md
.cursor/rules/: specify-rules.mdc
.github/workflows/: ci.yml  docker-publish.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
backend/: Cargo.toml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: error.rs  lib.rs  main.rs  router.rs
backend/crates/api/src/routes/: auth.rs  backup.rs  dashboard.rs  loans.rs  mod.rs  payments.rs  sonderzahlungen.rs
backend/crates/api/tests/: auto_payments_test.rs  contract_dashboard.rs  dashboard_test.rs  export_import_test.rs  loan_detail_test.rs  loans_create_test.rs  loans_manage_test.rs  sonderzahlungen_test.rs
backend/crates/db/: Cargo.toml
backend/crates/db/src/: auth.rs  export.rs  import.rs  lib.rs  loans.rs  loans_create.rs  migrate.rs  payment_events.rs  recurring_sonderzahlungen.rs  scheduled_sonderzahlungen.rs  settings.rs  test_support.rs
backend/migrations/: 001_initial.sql
docker/: Dockerfile  compose.yml
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  playwright.screenshots.config.ts  vite.config.ts
frontend/src/: App.svelte  app.css
specs/001-debt-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+45 files in other folders)
