[package]
name = "api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dept-tracker"
path = "src/main.rs"

[dependencies]
domain = { path = "../domain" }
db = { path = "../db" }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
tempfile = "3"
db = { path = "../db" }
serde_json = { workspace = true }
tokio = { workspace = true }
