[package]
name = "db"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { path = "../domain" }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = "3"

[dev-dependencies]
